Start working with express

--- a/front-app/index.html
+++ b/front-app/index.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <h1>Home page</h1>
+<div class="container">
+    <p id="text">Welcome to my app</p>
+</div>
+<script src="index.js"></script>
 </body>
 </html>
